CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2003 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2003.February.26 (0.9.11)
  * Set $OUTPUT_CHARSET for Japanese locale, to fix Win32 issue.
    TOYAMA Shin-ichi <kyone@tky2.3web.ne.jp>


2003.February.22 (0.9.10)
  * UTF-8 stamp descriptions word-wrap around spaces.

  * Portuguese (from Portugal) translation.
    Ricardo Cruz <rick2@aeiu.pt>

  * Support for more HTML escape codes in description files.
    [ Not yet working ]

  * Czech .po file renamed to the correct "cs.po".
  
  * ALT+F4 accepted as alternative to [Escape] (to quit)
    by Tux Paint's main loop.  Windows wasn't rending a 'Close Window'
    event on that key combo, like it should (I think).
    John Popplewell <john@johnnypops.demon.co.uk>

  * Windows printing changes:
    + Now uses a default printer configuration.
    + No pop-up dialog appears unless [ALT] is held while hitting "Print"
      button in the toolbox.
    + Can be told to save any changes to printer configuration (so it's
      used as default configuration from now on) by sending the
      "--printcfg" command-line option.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Fancy cursors automatically disabled when in fullscreen mode in Windows.
    (A bug in SDL causes the larger cursors to leave trails on the screen.)

  * BeOS version will chdir to where Tux Paint is, if launched from a GUI
    (e.g., OpenTracker)
    Marcin 'Shard' Konicki <shard at beosjournal.org>

  * Included new "src/Makefile.beos"
    Marcin 'Shard' Konicki <shard at beosjournal.org>


2003.February.1 (0.9.9)
  * Translated into Slovak!
    Milan Plzik <mmp@golem.gymzv.sk>

  * Updated Norwegian Nynorsk translation.
    Karl Ove Hufthammer <karl@huftis.org>

  * Added Japanese translation to Tux Paint icon (tuxpaint.desktop)
    TOYAMA Shin-ichi <kyone@tky2.3web.ne.jp>
