@@ -1,5 +1,5 @@
                                    Tux Paint
-                                     0.9.10
+                                     0.9.11
 
   A simple drawing program for children
 
@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                       June 14, 2002 - February 22, 2003
+                       June 14, 2002 - February 28, 2003
 
      ----------------------------------------------------------------------
 
@@ -349,6 +349,8 @@ Options
                      |--------------------+------------------+---------|
                      |korean              |                  |         |
                      |--------------------+------------------+---------|
+                     |lithuanian          |lietuviu          |         |
+                     |--------------------+------------------+---------|
                      |norwegian           |nynorsk           |         |
                      |--------------------+------------------+---------|
                      |polish              |polski            |         |
@@ -522,6 +524,8 @@ Options
            |ja_JP.UTF-8 (*)|                   |Japanese            |
            |---------------+-------------------+--------------------|
            |ko_KR.UTF-8 (*)|                   |Korean              |
+           |---------------+-------------------+--------------------|
+           |lt_LT.UTF-8 (*)|Lietuviu           |Lithuanian          |
            |---------------+-------------------+--------------------|
            |nn_NO          |Norsk (nynorsk)    |Norwegian Nynorsk   |
            |---------------+-------------------+--------------------|
