@@ -10,7 +10,7 @@ alink="#FF00FF">
 <h1><img src="images/tuxpaint-title.png" width=220 height=219
 alt="Tux&nbsp;Paint"><br>
 
-0.9.10
+0.9.11
 
 </h1>
 <h3>A simple drawing program for children</h3>
@@ -21,7 +21,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - February 22, 2003</p>
+<p>June 14, 2002 - February 28, 2003</p>
 </center>
 
 <hr size=2 noshade>
@@ -504,6 +504,11 @@ New Breed Software</p>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
+	    <td><code>lithuanian</code></td>
+	    <td><code>lietuviu</code></td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
 	    <td><code>norwegian</code></td>
 	    <td><code>nynorsk</code></td>
 	    <td>&nbsp;</td>
@@ -799,6 +804,11 @@ New Breed Software</p>
         <td><code>ko_KR.UTF-8</code> (*)</td>
 	<td>&nbsp;</td>
 	<td>Korean</td>
+      </tr>
+      <tr>
+        <td><code>lt_LT.UTF-8</code> (*)</td>
+	<td>Lietuviu</td>
+	<td>Lithuanian</td>
       </tr>
       <tr>
         <td><code>nn_NO</code></td>
